--- a/src/css/blocks/_nav.scss
+++ b/src/css/blocks/_nav.scss
@@ -36,9 +36,9 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  /*transition-delay: .5s;*/
   opacity: 1;
-  transition-delay: .5s;
-  transition: transform .6s, opacity .6s;
+  transition: transform 1s, opacity 1s;
   transition-timing-function: cubic-bezier(0.7, 0, 0.3, 1);
   transform: translate3d(0, 0, 0);
   will-change: transform;
